# daily-python

./: .gitignore  .gitmodules  README.md  intro.md  package.json  pyproject.toml  references.yaml  theme.config.tsx  todo.md
agents/maigctester/: README.md  pyproject.toml
agents/maigctester/src/maigctester/: crew.py  main.py
appkits/agentsway/tests/doc_wrappers/: test_docling_features.py
appkits/agentsway/tests/features/: docling_features.feature
appkits/qpyapp/: .gitignore  README.md  every-chatgpt-ui.md  pyproject.toml
appkits/qpyapp/.devcontainer/: environment.yml
appkits/qpyapp/docs/: references.yaml
appkits/qpyapp/docs/revisited/1-setup/: jupterlan-setup.md  pdm-poetry-setup.md
appkits/qpyapp/docs/revisited/2-excel-data/: pandas-30min.md
appkits/qpyapp/src/qpyapp/: __init__.py
appkits/qpyapp/src/qpyapp/ai/: __init__.py
appkits/qpyapp/src/qpyapp/ai/providers/: cohere_gradio.py  crewai_gradio.py  deepseek_gradio.py  hyperbolic_gradio.py
appkits/qpyapp/src/qpyapp/apps/: ai_gradio_app.py
appkits/qpyapp/src/qpyapp/conf/: loaders.py
appkits/qpyapp/src/qpyapp/tasks/: base.py  containers.py  loaders.py  runners.py  task.py
appkits/qpyapp/src/qpycases/ai_client/: deepseek_v3.py
appkits/qpyapp/src/qpycases/proxy_checker/: proxies_fetcher.py  verifier.py
appkits/qpyapp/src/qpyllmapp/ai_client/: deepseek_v3.py
appkits/qpyapp/src/qpynotes/: __init__.py  notes_parser.py
appkits/qpyapp/src/qpynotes/basic/basic/: os_file_system.ipynb
appkits/qpyapp/src/qpynotes/topics/crawler/: basic.ipynb
appkits/qpyapp/src/qpynotes/topics/data_extraction/: webdata.ipynb
appkits/qpyapp/src/qpynotes/topics/excel/: README.md  excel-one-page.ipynb  user.xlsx
appkits/qpyapp/src/qpynotes/topics/maths/: README.md  probablistic.ipynb
appkits/qpyapp/src/qpynotes/topics/pandas/: README.md  basic.ipynb  basic_cheatsheet.ipynb  pandas_plot.ipynb
appkits/qpyapp/src/qpynotes/topics/videos/: ghostcut.ipynb  ghostcut.md
appkits/qpyapp/src/revisited/r_code_structure/: service_caller.py
appkits/qpyapp/src/revisited/r_framework/: __init__.py  panther_async_api.py
appkits/qpyapp/src/revisited/r_logs/: color.py  error_print.py  iprint.py  rich_ext.py
appkits/qpyapp/src/revisited/r_pandas/: user.xlsx
appkits/qpyapp/src/revisited/r_qa/: differ_tools.py
appkits/qpyapp/src/revisited/r_usecases/awesome/: awesome_generator.py
appkits/qpyapp/src/revisited/r_usecases/crawler/cn_plants/: all_names.csv  fetcher.py  fetcher_bnk.py  gbif.py  models.py  plants_handlers.py  plants_pd_handlers.py  proxied_requests.py  runners.py  website_runner.py  名称-经纬度.csv
appkits/qpyapp/tests/allure-results/: 7d79a662-230d-4378-a0c0-824287d3c089-result.json
appkits/qpyapp/tests/usecases/: test_proxy_checker.py
datafarm/datafeeds/src/datafeeds/sites/bilibili/: base.py  constans.py  downloader.py
datafarm/datafeeds/tests/sites/bilibili/: opp.py  test_downloader.py
datafarm/primary/: README.md  pyproject.toml
datafarm/primary/src/primary/adspower/: __init__.py  _api_entity.py  _base_category.py  _base_group.py  _base_http_client.py  _base_profile_api.py  exceptions.py  types.py
datafarm/primary/src/primary/adspower/async_api/: _base_profile.py  category.py  group.py  http_client.py  profile_api.py
datafarm/primary/src/primary/adspower/async_api/playwright/: profile.py
datafarm/primary/src/primary/adspower/sync_api/: _base_profile.py  category.py  group.py  http_client.py  profile_api.py
datafarm/primary/src/primary/adspower/sync_api/playwright/: profile.py
datafarm/primary/src/primary/adspower/sync_api/selenium/: profile.py
datafarm/primary/src/primary/cleanup/: csv_ext.py
datafarm/primary/src/primary/collectors/bilibili/: downloader.py  spliter_converter.py
datafarm/primary/src/primary/collectors/loc_gov_bonds/: enitity.py  models.py
datafarm/primary/src/primary/collectors/loc_gov_bonds/scrawler/: api.py  combined_data.xlsx  local.py  web.py
datafarm/primary/src/primary/pd_ext/: __init__.py  converters.py  fitlers.py  models.py
datafarm/primary/tests/bilibili/: test_downloader.py
datafarm/primary/tests/core/: __init__.py  test_playrighter.py
datafarm/primary/tests/loc_gov_bonds/: test_standard_process.py
datafarm/primary/tests/loc_gov_bonds/docs/: total-bond.xlsx
datafarm/primary/tests/loc_gov_bonds/funcs/: test_convert_funcs.py  test_download_pdfs.py  test_excel_ext.py
datafarm/primary/tests/pd_ext/: demo1.csv  demo2.xlsx  test_converters.py
datafarm/primary/tests/taoguba/: 2138102-1.csv  2138102-bnk.csv  2138102.csv  2368012-0.csv  2368012.csv  2368012_all.csv  auth_cookies.json  pages.html  test_taogu.py
docs/setup/: vs-code.md
fern/: apir-resources.yaml  docs.yml  fern.config.json
fern/docs/pages/: pdm-setup.mdx  welcome.mdx
fern/docs/pages/applications/: create-cli-app.mdx
pages/: index.mdx
pages/base/: base-pythonlibs.mdx
pages/dao/: database-accessor.mdx
pages/models/: json-one-page.mdx  structured-data-handler.mdx
pages/templates/: template-project.mdx
primary/: settings.toml
primary/src/primary/cleanup/: __init__.py  excel_ext.py  zip_ext.py
primary/src/primary/collectors/google_patent/: google_patent.py  runner.py
primary/src/primary/collectors/loc_gov_bonds/: __init__.py  bond_handlers.py  bootstrap.py  enitity.py  text_utils.py
primary/src/primary/pd_ext/: __init__.py  convert_funcs.py
primary/tests/loc_gov_bonds/: contants.py
primary/tests/loc_gov_bonds/docs/: 债务数据整理格式.xlsx
primary/tests/loc_gov_bonds/funcs/: test_data_integration.py  test_download_pdfs.py  test_handlers.py
qpyapp/src/qpyapp/core/api/monitor/: healthy_api.py
qpyapp/src/qpyapp/core/base/: base_fastapi.py
qpystructs/: pyproject.toml
qpystructs/src/qpystructs/: __init__.py  dicttools.py  models.py
qpystructs/tests/: model_for_test.py  test_dicttools.py  test_models.py
qpystructs/tests/structured-data/: unit.csv
scripts/: create.sh
(+1 files in other folders)
