[project]
name = "pyway"
version = "0.1.0"
description = "Personal Python Collections"
readme = "README.md"
requires-python = ">3.10, <3.13"
dependencies = []

[project.scripts]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["agents/*", "datafarm/*", "appkits/*", "shared/qpyapp"]


[tool.hatch.build.targets.wheel]
packages = ["src/qpyway"]
